[package]
name = "msp432p401r-pac"
version = "0.1.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
bare-metal = "0.1.x"
vcell = "0.1.x"

[lib]
name = "msp432p401r"
path = "src/lib.rs"

[features]
rt = ["cortex-m-rt/device"]
