[package]
name = "msp432p401r-pac"
version = "0.1.1"
authors = ["Caio Tavares <caio.tavares11@gmail.com>"]
description = "MSP432P401R Peripheral Access API (PAC)"
keywords = ["msp432p401r", "arm", "pac", "cortex-m4"]
repository = "https://github.com/msp432-rust/msp432p401r-pac"
license-file = "LICENSE"
edition = "2018"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.11"
bare-metal = "0.2.4"
vcell = "0.1"

[lib]
name = "msp432p401r"
path = "src/lib.rs"

[features]
rt = ["cortex-m-rt/device"]
