[package]
name = "msp432p401r-pac"
version = "0.2.0"
authors = ["Caio Tavares <caio.tavares11@gmail.com>", "José Cláudio S. Jr. <joseclaudio.silvajr@gmail.com>"]
description = "MSP432P401R Peripheral Access API (PAC)"
keywords = ["msp432p401r", "arm", "pac", "cortex-m4"]
repository = "https://github.com/msp432-rust/msp432p401r-pac"
license-file = "LICENSE"
edition = "2018"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
bare-metal = "1.0.0"
vcell = "0.1.x"

[lib]
name = "msp432p401r"
path = "src/lib.rs"

[features]
rt = ["cortex-m-rt/device"]
